--- a/LMS/Areas/Teachers/Views/Attendance/MarkAttendance.cshtml
+++ b/LMS/Areas/Teachers/Views/Attendance/MarkAttendance.cshtml
@@ -33,7 +33,7 @@
 
                             <form method="post" asp-controller="attendance" asp-action="addAttendance">
                                 <table id="AttendancePage" class="display" style="width:100%">
-                                    <thead>
+                                    <thead class="aThead">
                                         <tr>
 
                                             <th>Student ID</th>
@@ -89,7 +89,7 @@
                                             </tr>
                                         }
                                     </tbody>
-                                    <tfoot>
+                                    <tfoot class="aThead">
                                         <tr>
 
                                             <th>Student ID</th>
