--- a/LMS/Areas/Teachers/Views/Dashboard/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Dashboard/Index.cshtml
@@ -27,7 +27,7 @@
                             <h4 class="card-title">Total Students</h4>
                         </div>
                         <div class="card-body">
-                            <h1>160</h1>
+                            <h1>@ViewBag.Students</h1>
                         </div>
 
                     </div>
@@ -39,7 +39,7 @@
                             <h4 class="card-title">Total Subjects</h4>
                         </div>
                         <div class="card-body">
-                            <h1>4</h1>
+                            <h1>@ViewBag.Subjects</h1>
                         </div>
 
                     </div>
@@ -51,7 +51,7 @@
                             <h4 class="card-title">Total Classes</h4>
                         </div>
                         <div class="card-body">
-                            <h1>4</h1>
+                            <h1>@ViewBag.Classes</h1>
                         </div>
 
                     </div>
