--- a/LMS/Views/Login/Index.cshtml
+++ b/LMS/Views/Login/Index.cshtml
@@ -20,7 +20,8 @@
     <div class="cont">
         <form method="post">
             <div class="form sign-in">
-                <h2>Welcome To APEX</h2>
+                <h2><img src="~/Dashboard/assets/img/logo-new_03.png" style="width:100px; height:100px;"/></h2>
+                <h2 style="margin-top:20px;">Welcome To APEX</h2>
 
                 <label>
                     <span>User Name</span>
