--- a/LMS/Views/Login/Profile.cshtml
+++ b/LMS/Views/Login/Profile.cshtml
@@ -121,7 +121,7 @@
 
 
             
-            var strongRegex = new RegExp("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])");
+            var strongRegex = new RegExp("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@@#\$%\^&\*])(?=.{8,})");
 
             //var password = $('#txtPassword').val();
 
