--- a/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
@@ -119,7 +119,7 @@
                     <div id="editClassSectionModal" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <form method="post" asp-controller="assignSection" asp-action="editClassSection">
+                                <form method="post" asp-controller="assignSection" asp-action="editClassSection" id="editForm">
                                     <div class="modal-header">
                                         <h4 class="modal-title">Edit Class Section</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -255,18 +255,30 @@
         $('[data-toggle="tooltip"]').tooltip();
 
 
-        //Check If Class and Section Is Selected
-        $("#addForm").submit(function (event) {
-            
-            if ($("#Class_Id").val() === "0" || $("#Section_Id").val() === "0") {
+        //Check If Form Validation for Add
+        $("#addForm, #editForm").submit(function (event) {
 
-                event.preventDefault();
-                toastr.error("Kindly Select Class And Section");
+            
+            var ClassName = $("#Class_Id").val();
+            var SectionName = $("#Section_Id").val();
+            
+
+            if (ClassName === "0" || SectionName === "0")
+            {
+                ClassName = $('#editClassSectionModal #Class_Id').val();
+                SectionName = $('#editClassSectionModal #Section_Id').val();
                 
             }
-            
+
+            if (ClassName === "0" || SectionName === "0") {
+
+                event.preventDefault();
+                toastr.error("Kindly Select Class,Section And Subject");
+
+            }
 
         });
+
 
 
 
