--- a/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
@@ -221,7 +221,7 @@
                 &copy;
                 <script>
                     document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
             </div>
         </div>
     </footer>
