--- a/LMS/Areas/Students/Views/Test/AttemptTest.cshtml
+++ b/LMS/Areas/Students/Views/Test/AttemptTest.cshtml
@@ -188,11 +188,21 @@
 
     }
 
+    //function generateMultipleTextControl(obj, i) {
+    //    let filteredNames = filtered_keys(JSON.parse(obj), /Option/i );
+    //    var content = `<div  id="qa` + (parseInt(i, 10) + 1) + `" class="row"><div class="col-md-6" style="padding-left:40px;">`;
+    //    for (var i = 0; i < filteredNames.length; i++) {
+    //        content += `<label class="container" style="color: #2c2c2c">` + filteredNames[i] + `<input type="radio" id="radAnswer" name="radio" value=` + filteredNames[i] + `><span class="checkmark"></span></label>`
+    //    }
+    //    content += `</div></div>`
+    //    return content;
+    //}
     function generateMultipleTextControl(obj, i) {
-        let filteredNames = filtered_keys(JSON.parse(obj), /Option/i );
-        var content = `<div  id="qa` + (parseInt(i, 10) + 1) + `" class="row"><div class="col-md-6" style="padding-left:40px;">`;
+        var index = i;
+        let filteredNames = filtered_keys(JSON.parse(obj), /Option/i);
+        var content = `<div  id="qa` + (parseInt(i, 10) + 1) + `" class="row"><div class="col-md-6">`;
         for (var i = 0; i < filteredNames.length; i++) {
-            content += `<label class="container" style="color: #2c2c2c">` + filteredNames[i] + `<input type="radio" id="radAnswer" name="radio" value=` + filteredNames[i] + `><span class="checkmark"></span></label>`
+            content += `<label class="container" style="color: #2c2c2c">` + filteredNames[i] + `<input type="radio" name="radio` + index + `" value=` + filteredNames[i] + `><span class="checkmark"></span></label>`
         }
         content += `</div></div>`
         return content;
@@ -241,6 +251,51 @@
         $('#' + id).append(`<input type="file" class="form-control"/>`);
     }
 
+    //function getDataFromDiv(answers, testId) {
+
+    //    var answerObj = {};
+
+    //    $('#divQuestions').find(".questionObj").each(function () {
+            
+    //        var inputs = $(this).find('input');
+
+    //        var selects = $(this).find('select');
+
+    //        var textarea = $(this).find('textarea');
+
+    //        if (inputs.length > 3) {
+    //            answerObj = {
+    //                questionId: this.id,
+    //                answer: $('input[name="radio"]:checked').val(),
+    //                testId: testId,
+    //                answerTypeId: 1 //which is MCQ
+    //            };
+    //        }
+    //        else if (inputs.length == 1) {
+    //            file = $(inputs[0])[0].files[0];
+    //            data.append('file', file);
+    //            answerObj = {
+    //                questionId: this.id,
+    //                answer: $(inputs[0]).val(),
+    //                testId: testId,
+    //                answerTypeId: $(selects[0]).val()
+    //            };
+    //        }
+    //        else if (textarea.length > 0) {
+    //            answerObj = {
+    //                questionId: this.id,
+    //                answer: textarea.val(),
+    //                testId: testId,
+    //                answerTypeId: $(selects[0]).val()
+    //            };
+    //        }
+    //        answers.push(answerObj);
+    //    });
+
+    //    data.append('tests', JSON.stringify(answers));
+    //}
+
+
     function getDataFromDiv(answers, testId) {
 
         var answerObj = {};
@@ -254,9 +309,10 @@
             var textarea = $(this).find('textarea');
 
             if (inputs.length > 3) {
+                var radioButtonName = inputs[0].name;
                 answerObj = {
                     questionId: this.id,
-                    answer: $('input[name="radio"]:checked').val(),
+                    answer: $('input[name=' + radioButtonName + ']:checked').val(),
                     testId: testId,
                     answerTypeId: 1 //which is MCQ
                 };
@@ -283,7 +339,7 @@
         });
 
         data.append('tests', JSON.stringify(answers));
-    }
+    }	
 
     function getValuesFromForm() {
 
