--- a/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
@@ -20,7 +20,7 @@
                         <div class="row">
                             <div class="col-md-4 pr-1">
                                 <div class="form-group">
-                                    <label>Class </label>
+                                    <label>Class *</label>
                                     @*<select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.ClassList, "Class_Id", "Class_Name"))"></select>*@
                                     @*<select id="ddlClass" asp-for="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.ClassList, "Class_Id", "Class_Name"))"></select>*@
                                     <select id="ddlClass" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@ViewBag.ClassList"></select>
@@ -28,14 +28,14 @@
                             </div>
                             <div class="col-md-4 pr-1">
                                 <div class="form-group">
-                                    <label>Section </label>
+                                    <label>Section *</label>
                                     @*<select id="ddlSection" asp-for="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SectionList, "Section_Id", "Section_Name"))"></select>*@
                                     <select id="ddlSection" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@ViewBag.sectionList"></select>
                                 </div>
                             </div>
                             <div class="col-md-4 pr-1">
                                 <div class="form-group">
-                                    <label>Subject </label>
+                                    <label>Subject *</label>
                                     @*<select id="ddlSubject" asp-for="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SubjectList, "Subject_Id", "Subject_Name"))"></select>*@
                                     <select id="ddlSubject" name="Subject_Id" class="form-control" asp-for="Subject_Id" asp-items="@ViewBag.subjectList"></select>
                                 </div>
@@ -44,19 +44,16 @@
                         <div class="row">
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
-                                    <label>Date</label>
-                                    @{
-                                        var A_Date = DateTime.Now.Date;
-                                        // DateTime Assessment_Date = DateTime.ParseExact(A_Date, "yyyy-MM-dd", null).Date;
-                                    }
-                                    <input asp-for="LecturePost_Date" type="date" class="form-control" value="@DateTime.Today">
+                                    <label>Date *</label>
+                                    
+                                    <input id="LectureDate" asp-for="LecturePost_Date" type="date" class="form-control" value="">
                                     @*<input class="form-control" type="datetime-local" id="birthdaytime" name="birthdaytime">*@
                                 </div>
                             </div>
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
-                                    <label>Lesson Title</label>
-                                    <input asp-for="Lecture_Name" autocomplete="off" class="form-control" placeholder="Lesson Title">
+                                    <label>Lesson Title *</label>
+                                    <input id="LessonTitle" asp-for="Lecture_Name" autocomplete="off" class="form-control" placeholder="Lesson Title">
                                 </div>
                             </div>
                         </div>
@@ -64,14 +61,14 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label>Details</label>
-                                    <input asp-for="Lecture_Detail" autocomplete="off" class="form-control" placeholder="Lesson Details">
+                                    <textarea asp-for="Lecture_Detail" autocomplete="off" class="form-control" placeholder="Lesson Details" style="border: 1px solid #174876;"></textarea>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
-                                    <label>File Upload</label>
+                                    <label>File Upload *</label>
                                     <br />
                                     <input asp-for="Lecture_File" id="fileUpload" style="line-height: normal; opacity: 1; height: 28px; width: 70%; border: 1px solid; margin-top: 30px; font-size: 1.3em;" />
                                 </div>
@@ -98,7 +95,13 @@
 <script>
     $(document).ready(function () {
 
+        var today = new Date();
+        var dd = String(today.getDate()).padStart(2, '0');
+        var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+        var yyyy = today.getFullYear();
 
+        today = mm + '/' + dd + '/' + yyyy;
+        
         toastr.options = {
             "positionClass": "toast-top-center",
             "showDuration": "5000",
@@ -128,11 +131,29 @@
             
             var fileInput = $("#fileUpload").val();
 
+            if ($("#ddlClass").val() === "-1" || $("#ddlSection").val() === "-1" || $("#ddlSubject").val() === "-1") {
+
+                event.preventDefault();
+                toastr.error("Kindly Select Class,Section And Subject");
+
+            }
             if (fileInput === '')
             {
 
                 event.preventDefault();
                 toastr.error("Kindly Select File");
+
+            }
+            if ($("#LectureDate").val() === '') {
+
+                event.preventDefault();
+                toastr.error("Date Is Not Selected");
+
+            }
+            if ($("#LessonTitle").val() === '') {
+
+                event.preventDefault();
+                toastr.error("Lesson Title Is Empty");
 
             }
 
