--- a/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
@@ -28,11 +28,10 @@
                             </div>
 
                             <table id="classpage" class="display" style="width:100%">
-                                <thead>
+                                <thead class="aThead">
                                     <tr>
                                         <th>Lesson ID</th>
                                         <th>Lesson Name</th>
-                                        <th>Lesson Detail</th>
                                         <th>Date</th>
                                         <th>File</th>
                                         <th>Class</th>
@@ -47,7 +46,6 @@
                                         <tr>
                                             <td>@item.Id</td>
                                             <td>@item.Lecture_Name</td>
-                                            <td>@item.Lecture_Detail</td>
                                             <td>@item.LecturePost_Date.ToShortDateString()</td>
                                             <td>@item.ExistingFilePath</td>
                                             <td>@item.Class_Name</td>
@@ -71,6 +69,18 @@
                                         </tr>
                                     }
                                 </tbody>
+                                <tfoot class="aThead">
+                                    <tr>
+                                        <th>Lesson ID</th>
+                                        <th>Lesson Name</th>
+                                        <th>Date</th>
+                                        <th>File</th>
+                                        <th>Class</th>
+                                        <th>Section</th>
+                                        <th>Subject</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </tfoot>
                             </table>
                             <div class="clearfix">
 
@@ -199,7 +209,7 @@
 
 
             initComplete: function () {
-                this.api().columns([5, 6, 7]).every(function () {
+                this.api().columns([4, 5, 6]).every(function () {
                     var column = this;
                     //var theadname = $('#AttendanceDetailPage th').eq([d]).text();
                     var select = $(' <select><option value="">ALL</option></select>')
