--- a/LMS/wwwroot/Dashboard/assets/css/LoginStyleSheet.css
+++ b/LMS/wwwroot/Dashboard/assets/css/LoginStyleSheet.css
@@ -6,8 +6,8 @@
 
 body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    background-image: url('../img/image.png');
-    
+    /*background-image: url('../img/image.png');*/
+    background-color: #283844;
 }
 
 input, button {
@@ -31,9 +31,9 @@ input, button {
     position: relative;
     width: 900px;
     height: 550px;
-    margin: 30px auto 0px;
+    margin: 50px auto 0px;
     background: #194c7c;
-    opacity: 0.9;
+    opacity: 0.7;
 }
 
 .form {
@@ -41,7 +41,7 @@ input, button {
     width: 640px;
     height: 100%;
     transition: transform 1.2s ease-in-out;
-    padding: 100px 30px 30px;
+    padding: 40px 30px 30px;
     color: #fff;
 }
 
@@ -90,8 +90,8 @@ button {
         top: 0;
         width: 900px;
         height: 100%;
-        background-image: url('../img/loginimg.jpeg');
-        background-size: cover;
+        background-image: url('../img/signup.jpg');
+        background-size: auto;
         transition: transform 1.2s ease-in-out;
     }
 
